[package]
name = "meta_brain_fuck"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
walkdir = "2.4.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"